<resources>

    <string name="add_text">Text</string>
    <string name="app_name">UFrame</string>
    <string name="are_you_sure_remove">"Are you sure you want to remove pictures from "</string>
    <string name="are_you_sure_remove_last">"Remove last pictures from "</string>
    <string name="are_you_sure_run">"Are you sure you want to frame pictures located at "</string>
    <string name="background">Background color</string>
    <string name="blur">Blur</string>
    <string name="cant_read_folder">folder can\'t be read!</string>
    <string name="cant_save_picture_to">Can\'t save picture to</string>
    <string name="cant_write_to_this_folder">can\'t write to this folder</string>
    <string name="choose_format">Picture Format</string>
    <string name="circle">Circle</string>
    <string name="color">Color</string>
    <string name="create">Save</string>
    <string name="darkness">"Darkness "</string>
    <string name="dir_doesnt_exist">output folder doesn\'t exist yet</string>
    <string name="double_tap">Scale Saturation (2-tap)</string>
    <string name="edit_text">Edit text</string>
    <string name="emboss">Emboss</string>
    <string name="error">error</string>
    <string name="error_copying_exif">"(error writing EXIF) "</string>
    <string name="exif">Retain EXIF</string>
    <string name="exists">skip (already exists)</string>
    <string name="file_name">Folder Name</string>
    <string name="files_were_deleted">" files deleted"</string>
    <string name="fill_with_text">Fill with text</string>
    <string name="fit">Fit</string>
    <string name="font">Font</string>
    <string name="font_select">Select font</string>
    <string name="help">Adjust wave\'s width and height by 1-tap, wave\'s form by 2-tap, frame\'s width and height by 3-tap (when "Fit" is disabled)\n</string>
    <string name="input_folder">Input</string>
    <string name="input">Input</string>
    <string name="jpeg_quality">JPEG Compression</string>
    <string name="media_scanner">Media Scanner</string>
    <string name="media_scanner_desc">Press to search for new pictures and add them to gallery</string>
    <string name="media_scanning">Searching...</string>
    <string name="menu_settings">Settings</string>
    <string name="nnew">New</string>
    <string name="no_data">No Data</string>
    <string name="no_pictures">no pictures to process</string>
    <string name="none">None</string>
    <string name="normal">Normal</string>
    <string name="nothing_to_delete">nothing to delete</string>
    <string name="nothing_to_open">nothing to open</string>
    <string name="of">" of "</string>
    <string name="open">Open</string>
    <string name="output_folder">Output</string>
    <string name="picture_saved_to">Picture saved to</string>
    <string name="pictures_were_processed">" new pictures saved"</string>
    <string name="pictures_will_be_saved">Pictures will be saved as</string>
    <string name="postmark">Postmark</string>
    <string name="rainbow">Rainbow</string>
    <string name="remove">Remove</string>
    <string name="remove_last">Remove last</string>
    <string name="run">Run</string>
    <string name="saturation">"Saturation "</string>
    <string name="save_format">Save Format</string>
    <string name="save">Save</string>
    <string name="saved">done</string>
    <string name="select">Finish</string>
    <string name="settings">Settings</string>
    <string name="stop">Stop</string>
    <string name="stopped">stopped</string>
    <string name="success">UFrame: success</string>
    <string name="text">Text</string>
    <string name="tool">Tool</string>
    <string name="transparency">"Transparency "</string>
    <string name="width">"Width "</string>

</resources>