<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:uframe="vnd.blueararat.UFrame" >

    <PreferenceCategory android:title="@string/save" >
        <ListPreference
            android:defaultValue="@string/default_save_format"
            android:dialogTitle="@string/choose_format"
            android:entries="@array/entries_list_preference"
            android:entryValues="@array/entryvalues_list_preference"
            android:key="format"
            android:title="@string/save_format" />

        <vnd.blueararat.UFrame.SeekbarPref
            android:defaultValue="40"
            android:key="jpeg_quality"
            android:max="50"
            android:selectable="false"
            android:title="@string/jpeg_quality"
            uframe:min="50" />

        <vnd.blueararat.UFrame.ColorPref
            android:dialogLayout="@layout/color_pref_dialog"
            android:key="background_color"
            android:title="@string/background"
            android:widgetLayout="@layout/color_widget" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/tool" >
        <Preference
            android:key="media_scanner"
            android:summary="@string/media_scanner_desc"
            android:title="@string/media_scanner" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/text" >
        <vnd.blueararat.UFrame.FontPref
            android:key="font"
            android:summary="@string/font_select"
            android:title="@string/font" />
    </PreferenceCategory>

</PreferenceScreen>